изменил имя, добавил параграфф

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header class="header">
       <img src="./лого.jfif" alt="avatar" height="300" class="header__avatar" />
-      <h1 class="header__title">Роман Ипполитов</h1>
+      <h1 class="header__title">QA Engineer</h1>
+      <h2> Что-то добавил</h2>
       <h3 class="header__subtitle">Всегда можно быть лучше</h3>
     </header>
     <main>
