--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img src="./лого.jfif" alt="avatar" height="300" class="header__avatar" />
       <h1 class="header__title">Роман Ипполитов</h1>
-      <h3 class="header__subtitle">Всегда можно быть лучше</h3>
+      <h3 class="header__subtitle">Бесконечность не предел</h3>
     </header>
     <main>
       <section class="links">
